# RustServerPuzzles

./: .gitignore
alphabetcipher/: Cargo.toml  README.md
alphabetcipher/src/: main.rs
cratepacking/: Cargo.toml  README.md
cratepacking/src/: main.rs
goldbachweakconjecture/: Cargo.toml  README.md
goldbachweakconjecture/benches/: benchmark.rs
goldbachweakconjecture/lib/: lib.rs
goldbachweakconjecture/src/: main.rs
kolakoski/: Cargo.toml  README.md
kolakoski/benches/: my_benchmark.rs
kolakoski/lib/: lib.rs
kolakoski/src/: main.rs
montyhall/: Cargo.toml  README.md
montyhall/benches/: my_benchmark.rs
montyhall/lib/: lib.rs
montyhall/src/: main.rs
romannumeralcompare/: Cargo.toml
romannumeralcompare/src/: main.rs
subfactorial/: Cargo.toml  README.md
subfactorial/benches/: my_benchmark.rs
subfactorial/lib/: lib.rs
subfactorial/src/: main.rs
well/: Cargo.toml  README.md
well/benches/: my_benchmark.rs
well/lib/: lib.rs
well/src/: main.rs
