[package]
name = "goldbachweakconjecture"
version = "0.1.0"
edition = "2021"

[[bin]]
name="goldbachweakconjecture"
path="src/main.rs"

[lib]
name="goldbachweaklib"
path="lib/lib.rs"

[[bench]]
name = "benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }
