[package]
name = "kolakoski"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kolakoski"
path = "src/main.rs"

[lib]
name = "kolakoskilib"
path = "lib/lib.rs"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
rayon = "1.5.1"
criterion = { version = "0.4", features = ["html_reports"] }