[package]
name = "montyhall"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "montyhall"
path = "src/main.rs"

[lib]
name = "montyhalllib"
path = "lib/lib.rs"

[[bench]]
name = "my_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }