[package]
name = "subfactorial"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subfactorial"
path = "src/main.rs"

[lib]
name =  "subfactoriallib"
path = "lib/lib.rs"

[[bench]]
name = "my_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
criterion = { version = "0.4", features = ["html_reports"] }